Closed Bug 786103 Opened 13 years ago Closed 13 years ago

Stagefright: Galaxy S III hardware decoder video is green (OMX_COLOR_FormatYUV420SemiPlanar)

Categories

(Core :: Audio/Video, defect, P1)

ARM
Android
defect

Tracking

()

RESOLVED FIXED
mozilla18
Tracking Status
firefox16 --- unaffected
firefox17 --- fixed
firefox18 --- fixed

People

(Reporter: cpeterson, Assigned: cpeterson)

References

()

Details

(Whiteboard: [hwdecoder])

Attachments

(2 files)

This is a color conversion regression in Nightly build 2012-08-27. The pushlog from build 08-26 to 08-27 is: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=b3cce81fef1a&tochange=8af6a22827ec This bug is likely a regression from this changeset for bug 767480: https://hg.mozilla.org/mozilla-central/rev/f26d6c5a2d93
Blocks: 786117
Blocks: 787227
Whiteboard: [swdecoder]
Whiteboard: [swdecoder] → [hwdecoder]
Same issue on the Galaxy Note 1 with hardware playback. Video is green with flickering in and out of non-green.
Assignee: nobody → cpeterson
Status: NEW → ASSIGNED
Summary: Stagefright hardware decoded videos are green on Galaxy S III (OMX_COLOR_FormatYUV420SemiPlanar) → Stagefright: Galaxy S III hardware decoder video is green (OMX_COLOR_FormatYUV420SemiPlanar)
This bug is a regression from bug 767480: https://hg.mozilla.org/mozilla-central/rev/f26d6c5a2d93 That fix inadvertently moved some pointer math out of CopyPlane()'s loops. Because the aSrc and aDst pointers where not advanced, the Cb and Cr planes were not copied for color formats that hit CopyPlane()'s slow path. This patch fixes the green videos, but does not address related bug 785275.
Attachment #659068 - Flags: review?(roc)
Attachment #659068 - Flags: feedback?(kchen)
Comment on attachment 659068 [details] [diff] [review] advance-aSrc-aDst-pointers.patch Review of attachment 659068 [details] [diff] [review]: ----------------------------------------------------------------- oops
Attachment #659068 - Flags: review?(roc) → review+
No longer blocks: 786117
Attachment #659068 - Flags: feedback?(kchen) → feedback+
Blocks: 785339
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Comment on attachment 659068 [details] [diff] [review] advance-aSrc-aDst-pointers.patch [Approval Request Comment] Bug caused by (feature/regressing bug #): bug 767480 (which regressed Nightly 18 and Aurora 17) User impact if declined: H264 videos may be green on some Android devices Testing completed (on m-c, etc.): m-c Risk to taking this patch (and alternatives if risky): Low risk. This patch just reverts a copy/paste typo in a video color conversion function. String or UUID changes made by this patch: N/A
Attachment #659068 - Flags: approval-mozilla-aurora?
Attachment #659068 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: