Bug 786103 - Advance the aSrc and aDst pointers when copying video planes. r=roc